[gd_scene load_steps=15 format=2]

[ext_resource path="res://Platform/Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Platform/Asset/Sprites/player.png" type="Texture" id=2]
[ext_resource path="res://Platform/Scene/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Platform/Scene/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Platform/Asset/Sounds/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Platform/Asset/Sounds/fall.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 29 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:is_dead")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath(".:is_dead")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("JumpSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 28 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 3.875 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
jump_force = 880.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 19 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/death = SubResource( 8 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpRequestTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 16 )
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 6 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 52 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -8.125 )
shape = SubResource( 7 )

[node name="TrailTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[connection signal="hurt" from="HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="hit" from="HitBox" to="." method="_on_HitBox_hit"]
[connection signal="timeout" from="TrailTimer" to="." method="_on_TrailTimer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
